--- a/index.html
+++ b/index.html
@@ -1,9 +1,61 @@
-announcement: Website is under development!
 
-Hall of Fame: Vince (Owner), MeV2 (Administrator), Jake Z. (Administrator), Sqilxz (Administrator), MrJorge (Administrator), Cash (Administrator), luke. (Administrator), Meryam (Administrator), and Tegan (Administrator).
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <link rel="icon" type="image/png" href="https://tenor.com/view/vio-vlone-gif-18448681">
+  
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <style>
+      body,
+      html {
+        height: 100%;
+        margin: 0;
+      }
+      input,
+select,
+textarea {
+    max-width: 20%;
+}
+    </style>
 
-The domains we own:
-agents.1
-agents.lol
-feds.1
-gov.p (this domain)
+    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  </head>
+  <body>
+  <div align="center">
+  <img src="https://tenor.com/view/vio-vlone-gif-18448681" alt="AFRP" width="175" height="200">
+  
+  <form action="https://sheetdb.io/api/v1/7bkjoq9lsk1xi" method="POST" id="sheetdb-form">
+  
+  <h1>Logs</h1>
+  <div class="field">
+      <label for="name">Roblox Username:</label>
+      <input type="text" class="form-control" id="callsign" name="callsign" placeholder="" />
+      <small></small>
+  </div>
+  <div class="field">
+  <label for="time_in"Discord:</label>
+  <input type="text" class="form-control" id="time_in" name="time_in" step="60" placeholder=" />
+  <small></small>
+</div>
+<div class="field">
+<label for="time_out">Discord ID:</label>
+<input type="text" class="form-control" id="time_out" name="time_out" step="60" placeholder=" />
+<small></small>
+</div>
+<br />
+<div class="checkbox">
+<label><input type="checkbox" id="certify" name="certify" /> I agree that I won't abuse this logging system.</label>
+
+<small></small>
+</div>
+  
+  <button type="submit" class="g-recaptcha btn btn-primary" 
+        data-action='submit'>Submit</button>
+</form>
+</div>
+
+</body>
+</html>
