--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@ textarea {
   
   <h1>Logs</h1>
   <div class="field">
-      <label for="name">Roblox Username:</label>
-      <input type="text" class="form-control" id="callsign" name="callsign" placeholder="" />
+      <label for="roblox_username">Roblox Username</label>
+      <input type="text" class="form-control" id="roblox_username" name="roblox_username" placeholder="" />
       <small></small>
   </div>
   <div class="field">
-  <label for="time_in"Discord:</label>
-  <input type="text" class="form-control" id="time_in" name="time_in" step="60" placeholder=" />
+  <label for="discord"Discord</label>
+  <input type="text" class="form-control" id="discord" name="discord" step="60" placeholder=" />
   <small></small>
 </div>
 <div class="field">
-<label for="time_out">Discord ID:</label>
-<input type="text" class="form-control" id="time_out" name="time_out" step="60" placeholder=" />
+<label for="discord_id">Discord ID</label>
+<input type="text" class="form-control" id="discord_id" name="discord_id" step="60" placeholder=" />
 <small></small>
 </div>
 <br />
