--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ textarea {
   </head>
   <body>
   <div align="center">
-  <img src="https://tenor.com/view/vio-vlone-gif-18448681" alt="AFRP" width="175" height="200">
+<div class="tenor-gif-embed" data-postid="18448681" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/vio-vlone-gif-18448681">Vio Vlone Sticker</a>from <a href="https://tenor.com/search/vio-stickers">Vio Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   
   <form action="https://sheetdb.io/api/v1/7bkjoq9lsk1xi" method="POST" id="sheetdb-form">
   
