--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-  <link rel="icon" type="image/png" href="https://tenor.com/view/vio-vlone-gif-18448681">
-  
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <style>
-      body,
-      html {
-        height: 100%;
-        margin: 0;
-      }
-      input,
-select,
-textarea {
-    max-width: 20%;
-}
-    </style>
-
-    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  </head>
-  <body>
-  <div align="center">
-<div class="tenor-gif-embed" data-postid="18448681" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/vio-vlone-gif-18448681">Vio Vlone Sticker</a>from <a href="https://tenor.com/search/vio-stickers">Vio Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-  
-  <form action="https://sheetdb.io/api/v1/7bkjoq9lsk1xi" method="POST" id="sheetdb-form">
-  
-  <h1>Logs</h1>
-  <div class="field">
-      <label for="roblox_username">Roblox Username</label>
-      <input type="text" class="form-control" id="roblox_username" name="roblox_username" placeholder="" />
-      <small></small>
-  </div>
-  <div class="field">
-  <label for="discord"Discord</label>
-  <input type="text" class="form-control" id="discord" name="discord" step="60" placeholder=" />
-  <small></small>
-</div>
-<div class="field">
-<label for="discord_id">Discord ID</label>
-<input type="text" class="form-control" id="discord_id" name="discord_id" step="60" placeholder=" />
-<small></small>
-</div>
-<br />
-<div class="checkbox">
-<label><input type="checkbox" id="certify" name="certify" /> I agree that I won't abuse this logging system.</label>
-
-<small></small>
-</div>
-  
-  <button type="submit" class="g-recaptcha btn btn-primary" 
-        data-action='submit'>Submit</button>
-</form>
-</div>
-
-</body>
-</html>
+Domains we own: agents.lol Handshake Domains we own: gov.p, agents.1, feds.1
