--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Domains we own: agents.lol Handshake Domains we own: gov.p, agents.1, feds.1
+ <h1>agents.lol</h1>
+  <div class="field">
+      <label for="name">Domains we own: agents.lol, gov.work, mafia.family</label>
+      <label for="name">Handshake Domains we own: gov.p, agents.1, feds.1</label>
+      <label for="name">Need to contact the site admin? admin@agents.lol</label>
+      <small></small>
+  </div>
