--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
   <div class="field">
       <label for="name">Domains we own: agents.lol, gov.work, mafia.family</label>
          <small></small>
+  </div>
+
+  <div class="field">
       <label for="name">Handshake Domains we own: gov.p, agents.1, feds.1</label>
          <small></small>
+  </div>
+
+  <div class="field">
       <label for="name">Need to contact the site admin? admin@agents.lol</label>
       <small></small>
+  </div>
+
+ <h1>I love you Sqilxz <3 - Ren/h1>
+  <small></small>
   </div>
