--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <small></small>
   </div>
 
- <h1>I love you Sqilxz <3 - Ren/h1>
+ <h1>I love you Sqilxz ❤️ - Ren/h1>
   <small></small>
   </div>
