--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-samantha - there u go elliot, happy?
+Under Development, This website is owned by fedgov.lol/kiko. Need to contact Kiko? Email kiko@fedgov.lol.
